--- a/index.html
+++ b/index.html
@@ -8,7 +8,55 @@
    <link rel="stylesheet" href="style.css">
    <script src="script/script.js"></script>
 </head>
+
 <body>
-   
+
+
+   <div class="conteiner">
+
+      <nav class="nav">
+         <span class="nav_logo">
+            <img src="#" alt="Logo">
+         </span>
+         <span class="nav_contacts">
+            <div class="contacts">
+               <p>
+                  +38 0675589412
+                  <br>
+                  info@worldinject.com.ua 
+               </p>
+            </div>
+         </span>
+      </nav>
+      <span class="search">
+         <div class="nav_button">
+            <a class="button" href="#">Головна</a>
+            <hr style="height: 80%; width: 1px;">
+            <a class="button" href="#">Обладнання</a>
+            <hr style="height: 80%; width: 1px;">
+            <a class="button" href="#">Контакти</a>
+         </div>
+         <input class="search_panel" type="text">
+      </span>
+
+      <div class="over_block">
+         <div class="left_icon">
+            <center class="left_text">Лиття пластмас <br> під тиском</center>
+         </div>
+         <div class="main_photo">
+            <img src="#" alt="main_photo">
+         </div>
+         <div class="right_icon"></div>
+      </div>
+
+      <div class="contacts_block">
+         <div class="category">
+            
+         </div>
+      </div>
+
+   </div>
+
 </body>
+
 </html>
