--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>World Inject</title>
+   <title>World Inject (main)</title>
    <link rel="stylesheet" href="style.css">
-   <script src="script/script.js"></script>
+   <script src="script/massive.js"></script>
 </head>
 
 <body>
@@ -16,14 +16,19 @@
 
       <nav class="nav">
          <span class="nav_logo">
-            <img src="#" alt="Logo">
+            <img src="img/logo.png" alt="Logo">
          </span>
          <span class="nav_contacts">
             <div class="contacts">
                <p>
-                  +38 0675589412
-                  <br>
-                  info@worldinject.com.ua 
+                  <div style="display: flex; flex-direction: row; margin-bottom: 10px;">
+                     <img style="margin-right: 10px;" src="img/2icon.png" alt="number">
+                     +380675589412
+                  </div>
+                  <div style="display: flex; flex-direction: row;">
+                     <img style="margin-right: 10px;" src="img/1icon.png" alt="email">
+                     info@worldinject.com.ua 
+                  </div>
                </p>
             </div>
          </span>
@@ -44,17 +49,62 @@
             <center class="left_text">Лиття пластмас <br> під тиском</center>
          </div>
          <div class="main_photo">
-            <img src="#" alt="main_photo">
+            <div class="left_main_slide">
+
+            </div>
          </div>
          <div class="right_icon"></div>
       </div>
 
       <div class="contacts_block">
          <div class="category">
-            
+            <div class="bar">
+               <span class="click">
+                  <div style="background-color: white; width: 15px; height: 15px; margin-left: 10px; margin-right: 10px;"></div>
+                  Меню
+               </span>
+               <span id="click">
+                  <a style="color: #365F91; margin-left: 10px;" href="#"> &#8658 Головна</a>
+               </span>
+            </div>
+            <div class="main_text">
+               <span style="margin-left: 20px; display: flex; flex-direction: row; align-items: center;"><div style="width: 10px; margin-right: 10px; height: 10px; background-color: #365F91;"></div>Вироби з пластику</span>
+               <hr style="width: 95%;">
+               <p style="font-size: 13px; margin-right: 20px; margin-left: 20px; text-align: justify;">
+                  Наша компанія спеціалізується на виготовленні продукції з пластмас високої якості, як господарчих товарів широкого вжитку, так і специфічних товарів за індивідуальним замовленням на сучасному обладнанні. 
+                  Ми володіємо парком машин виробництва австрійської фірми Еngel, лідера в розробці високошвидкісних термопластавтоматів. Маємо можливість виготовляти трьохкольорові вироби, завдяки унікальній машині ТПА Engel Victory Combi.
+                  Також маємо повністю електричну машину ТПА Engel E-motion, яка підходить для випуску товарів у фармаіндустрії. 
+                  Є можливість виготовляти вироби великого розміру, до метра й навіть більше, на ТПА Engel DUO.
+                  Приймаємо замовлення по виготовленню необхідної продукції як на пресс-формах замовника, так і розглянемо можливість виготовлення необхідної пресс-форми, в залежності від обсягу замовлення.
+               </p>
+               <span class="bottom_bar">
+                  <div class="fotter_bar">
+                     Продукція
+                  </div>
+                  <div class="fotter_bar">
+                     Пресс-форми
+                  </div>
+                  <div class="fotter_bar">
+                     Полімери у гранулах
+                  </div>
+               </span>
+            </div>
+         </div>
+         <div class="our_proj">
+            <div style="background-color: white; width: 15px; height: 15px; margin-left: 10px;"></div>
+            <p style="margin-left: 10px; color: white;">Наше виробництво</p>
+         </div>
+         <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1795.1571994936562!2d30.479986761117914!3d50.48326467233241!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde5e5613e39%3A0xf772c1acaf6124c!2z0YPQuy4g0KLRg9C70YzRh9C40L3RgdC60LDRjywgNiwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1664798926462!5m2!1sru!2sua" width="75%" height="95%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
          </div>
       </div>
-
+      
+      <footer class="footer">
+         <center style=" color: white;">
+            Copyright © 2022 <b>World Inject</b> Rights Reserved. <br>
+            Designed by pipale.
+         </center>
+      </footer>
    </div>
 
 </body>
