--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       </nav>
       <span class="search">
          <div class="nav_button">
-            <a class="button" href="#">Головна</a>
+            <a class="button" href="index.html">Головна</a>
             <hr style="height: 80%; width: 1px;">
             <a class="button" href="#">Обладнання</a>
             <hr style="height: 80%; width: 1px;">
-            <a class="button" href="#">Контакти</a>
+            <a class="button" href="indexContacts.html">Контакти</a>
          </div>
          <input class="search_panel" type="text">
       </span>
