--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
       <div class="over_block">
          <div class="left_icon">
             <div style="display: flex; flex-direction: column;">
+
+            </div>
+            <center class="left_text">Лиття пластмас <br> під тиском
                <button style="margin-bottom: 5px;" class="prev">&#8657</button>
                <button style="margin-top: 5px;" class="next">&#8659</button>
-            </div>
-            <center class="left_text">Лиття пластмас <br> під тиском</center>
+            </center>
          </div>
          <div class="main_photo">
             <div class="slider">
