--- a/indexContacts.html
+++ b/indexContacts.html
@@ -45,8 +45,8 @@
       <div class="over_block">
          <div class="left_icon">
             <div style="display: flex; flex-direction: column;">
-               <!-- <button style="margin-bottom: 5px;" class="prev">&#8657</button>
-               <button style="margin-top: 5px;" class="next">&#8659</button> -->
+               <button style="margin-bottom: 5px;" class="prev">&#8657</button>
+               <button style="margin-top: 5px;" class="next">&#8659</button>
             </div>
             <center class="left_text">Лиття пластмас <br> під тиском</center>
          </div>
@@ -75,7 +75,10 @@
                   </span>
                </div>
                <div class="information">
-
+                  <div class="information_blocks">
+                     <a href=""></a>
+                     <script src="script/script.js"></script>
+                  </div>
                </div>
          </div>
          <div class="our_proj">
@@ -96,7 +99,6 @@
    </div>
 
 
-   <script src="script/script.js"></script>
    <script src="script/massive.js"></script>
    <script src="script/slider.js"></script>
 </body>
