--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
          <div class="nav_button">
             <a class="button" href="index.html">Головна</a>
             <hr style="height: 80%; width: 1px;">
-            <a class="button" href="#">Обладнання</a>
+            <a class="button" href="indexInstruments.html">Обладнання</a>
             <hr style="height: 80%; width: 1px;">
             <a class="button" href="indexContacts.html">Контакти</a>
          </div>
@@ -132,7 +132,6 @@
       </footer>
    </div>
 
-   <!-- <script src="script/script.js"></script> -->
    <script src="script/massive.js"></script>
    <script src="script/slider.js"></script>
 </body>
