--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
 
       <div class="over_block">
          <div class="left_icon">
-            <div style="display: flex; flex-direction: column;">
-
-            </div>
-            <center class="left_text">Лиття пластмас <br> під тиском</center>
+            <div style="display: flex; flex-direction: column;"></div>
+            <img class="left_Text_On" src="img/31223.png" alt="">
          </div>
          <div class="main_photo">
             <div class="slider">
@@ -61,8 +59,8 @@
                   </script>
                </div>
             </div>
-            <button style="position: absolute; margin-left: 440px; margin-top: 210px;" class="next">&#10230</button>
-            <button style="position: absolute; margin-left: 5px; margin-top: 210px;" class="prev">&#10229</button>
+            <button style="position: absolute; margin-left: 440px; margin-top: 200px;" class="next">&#10230</button>
+            <!-- <button style="position: absolute; margin-left: 5px; margin-top: 210px;" class="prev">&#10229</button> -->
          </div>
          <div class="right_icon"></div>
       </div>
@@ -74,13 +72,13 @@
                   Меню
                </span>
                <span id="click">
-                  <a class="tt" href="#"> &#8658 Головна</a>
+                  <a class="tt" href="index.html"> &#8658 Головна</a>
                </span>
             </div>
             <div class="main_text">
                <span style="color: #365F91; font-weight: bold; margin-left: 20px; display: flex; flex-direction: row; align-items: center;"><div style="width: 10px; margin-right: 10px; height: 10px; background-color: #365F91;"></div>Вироби з пластику</span>
                <hr style="width: 95%;">
-               <p style="font-size: 14px; margin-right: 20px; margin-left: 20px; text-align: justify;">
+               <p style="font-size: 16px; margin-right: 20px; margin-left: 20px; text-align: justify;">
                   Наша компанія спеціалізується на виготовленні продукції з пластмас високої якості, як господарчих товарів широкого вжитку, так і специфічних товарів за індивідуальним замовленням на сучасному обладнанні. 
                   Ми володіємо парком машин виробництва австрійської фірми Еngel, лідера в розробці високошвидкісних термопластавтоматів. Маємо можливість виготовляти трьохкольорові вироби, завдяки унікальній машині ТПА Engel Victory Combi.
                   Також маємо повністю електричну машину ТПА Engel E-motion, яка підходить для випуску товарів у фармаіндустрії. 
@@ -94,7 +92,7 @@
                         <p style="font-weight: bold; color: #365F91;">Продукція</p>
                      </div>
                      <hr>
-                     <p style="font-size: 13px;">Шукаємо постійних партнерів зі збуту нашої продукції.</p>
+                     <p style="font-size: 15px;">Шукаємо постійних партнерів зі збуту нашої продукції.</p>
                   </div>
                   <div class="fotter_bar">
                      <div style="display: flex; flex-direction: row;">
@@ -102,7 +100,7 @@
                         <p style="font-weight: bold; color: #365F91;">Пресс-форми</p>
                      </div>
                      <hr>
-                     <p style="font-size: 13px;">Купуємо пресс-форми б/у.</p>
+                     <p style="font-size: 15px;">Купуємо пресс-форми б/у.</p>
                   </div>
                   <div class="fotter_bar">
                      <div style="display: flex; flex-direction: row;">
@@ -110,7 +108,7 @@
                         <p style="font-weight: bold; color: #365F91;">Полімери у гранулах</p>
                      </div>
                      <hr>
-                     <p style="font-size: 13px;">Розглянемо пропозиції з покупки сировини - полімери у гранулах. Цікавить як первинна, так і вторинна сировина.</p>
+                     <p style="font-size: 15px;">Розглянемо пропозиції з покупки сировини - полімери у гранулах. Цікавить як первинна, так і вторинна сировина.</p>
                   </div>
                </span>
             </div>
@@ -127,7 +125,7 @@
       <footer class="footer">
          <center style=" color: white;">
             Copyright © 2022 <b>World Inject</b> Rights Reserved. <br>
-            Designed by pipale.
+            Designed by Vobu.
          </center>
       </footer>
    </div>
