--- a/indexContacts.html
+++ b/indexContacts.html
@@ -44,7 +44,7 @@
 
       <div class="over_block">
          <div class="left_icon">
-            <img class="left_Text_On" src="img/leftText.png" alt="Left text">
+            <img class="left_Text_On" src="img/31223.png" alt="Left text">
          </div>
          <div class="main_photo">
             <div class="slider">
@@ -58,20 +58,20 @@
                   </script>
                </div>
             </div>
-            <button style="position: absolute; margin-left: 440px; margin-top: 210px;" class="next">&#10230</button>
-            <button style="position: absolute; margin-left: 5px; margin-top: 210px;" class="prev">&#10229</button>
+            <button style="position: absolute; margin-left: 440px; margin-top: 200px;" class="next">&#10230</button>
+            <!-- <button style="position: absolute; margin-left: 5px; margin-top: 210px;" class="prev">&#10229</button> -->
          </div>
          <div class="right_icon"></div>
       </div>
       <div class="contacts_block">
-         <div class="category">
+         <div id="category">
             <div class="bar">
-                  <span class="click">
+                  <span style="height: 20%;" class="click">
                      <div style="background-color: white; width: 15px; height: 15px; margin-left: 10px; margin-right: 10px;"></div>
                      Меню
                   </span>
-                  <span id="click">
-                     <a class="tt" href="#"> &#8658 Контакти</a>
+                  <span style="height: 20%;" id="click">
+                     <a class="tt" href="indexContacts.html"> &#8658 Контакти</a>
                   </span>
                </div>
                <div class="information">
@@ -93,7 +93,7 @@
       <footer class="footer">
          <center style=" color: white;">
             Copyright © 2022 <b>World Inject</b> Rights Reserved. <br>
-            Designed by pipale.
+            Designed by Vobu.
          </center>
       </footer>
    </div>
