--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                <p>
                   <div style="display: flex; flex-direction: row; margin-bottom: 10px;">
                      <img style="margin-right: 10px;" src="img/2icon.png" alt="number">
-                     <p>+380982462702</p>
+                     <a href="tel:+380982462702">+380982462702</a>
                   </div>
                   <div style="display: flex; flex-direction: row;">
                      <img style="margin-right: 10px;" src="img/1icon.png" alt="email">
-                     <p>info@worldinject.com.ua</p> 
+                     <a href="mailto:info@worldinject.com.ua">info@worldinject.com.ua</a>
                   </div>
                </p>
             </div>
